k8s/influxdb_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  ports:
  - port: 8086
  selector:
    app: influxdb
  type: ClusterIP
