k8s/snmpcollector_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: snmpcollector
spec:
  ports:
  - port: 8090
  selector:
    app: snmpcollector
  type: ClusterIP
