k8s/snmpsimulator_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: snmpsimulator
spec:
  ports:
  - port: 1161
    protocol: UDP
  selector:
    app: snmpsimulator
  type: ClusterIP
