k8s/snmpcollector_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snmpcollector
  labels:
    app: snmpcollector
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snmpcollector
            port:
              number: 8090
